--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python -m unittest discover -p "*_test.py"
+  - coverage run -m unittest discover -p "*_test.py"
+
+after_script:
+  - bash <(curl -s https://codecov.io/bash)
